[package]
name = "oanda-stream-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "*"
futures-util = "*"
serde = { version = "*", features = ["derive", "serde_derive"] }
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
toml = "*"
clap = "*"

[profile.release-lto]
inherits = "release"
lto = true