[package]
name = "oanda-stream-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"                                                                   # 0.4.14
env_logger = "*"                                                            # 0.9.0
reqwest = { version = "*", features = ["json", "stream"] }                  # 0.11.9
tokio = { version = "*", features = ["full"] }                              # 1.17.0
tokio-util = { version = "*", features = ["io"] }                           # 0.7.0
futures-util = "*"                                                          # 0.3.21
serde = { version = "*", features = ["derive", "serde_derive"] }            # 1.0.136
serde_json = "*"                                                            # 1.0.79
chrono = { version = "*", features = ["serde"] }                            # 0.4.19
toml = "*"                                                                  # 0.5.8
clap = "*"                                                                  # 3.1.0

[profile.release-lto]
inherits = "release"
lto = true